fixing layout issues

--- a/styles/Home/Infos.module.css
+++ b/styles/Home/Infos.module.css
@@ -41,6 +41,12 @@
 
 @media (max-width: 600px) {
     .infos {
-        margin: -70px 20px 20px;
+        margin: -70px 20px 0    ;
+    }
+
+    .card {
+        margin: 10px;
+        height: 130px;
+        padding: 10px 15px;
     }
 }
