--- a/styles/Sobre/Galeria.module.css
+++ b/styles/Sobre/Galeria.module.css
@@ -57,7 +57,7 @@
   height: 100px;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 800px) or (max-height: 800px) {
   .imgCard {
     height: 180px;
     width: 270px;
@@ -79,7 +79,11 @@
   }
 }
 
-@media (max-width: 630px) {
+@media (max-width: 630px) or (max-height: 630px)  {
+  .galeria {
+    padding: 30px 10px;
+  }
+
   .imgCard {
     height: 140px;
     width: 210px;
@@ -101,7 +105,7 @@
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 500px) or (max-height: 500px) {
   .imgCard {
     height: 220px;
     width: 320px;
